[package]
name = "reproducible-build-infrastructure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
shadow-rs = "0.5.25"
config = "0.11.0"
prost = "0.8"
dashmap = "4.0.2"
tempfile = "3"

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"