[package]
name = "bios"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
shadow-rs = "0.5.25"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"